--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://HarshBhawsar08.github.io/Project1u",
+  "homepage": "https://harshbhawsar08.github.io/Project1u/",
   "name": "pharma-frontend",
   "private": true,
   "version": "0.0.0",
